--- a/src/main/resources/dart2-v3template/_complex_from_json.mustache
+++ b/src/main/resources/dart2-v3template/_complex_from_json.mustache
@@ -1,5 +1,5 @@
 {
 final _jsonData = json[r'{{{baseName}}}'];
-{{name}} = (_jsonData == null) ? null : ((dynamic data) { return {{>_from_json}}; }(_jsonData));
+{{name}} = (_jsonData == null) ? {{#defaultValue}}{{{defaultValue}}}{{/defaultValue}}{{^defaultValue}}null{{/defaultValue}} : ((dynamic data) { return {{>_from_json}}; }(_jsonData));
 } // _jsonFieldName
 
