--- a/src/main/resources/dart2-v3template/class.mustache
+++ b/src/main/resources/dart2-v3template/class.mustache
@@ -27,8 +27,8 @@ class {{classname}}{{#parent}} extends {{parent}}{{/parent}} {
 {{^hasVars}}
   {{#required}}{{#nullSafe}}late {{/nullSafe}}{{/required}}dynamic{{^required}}{{#nullSafe}}?{{/nullSafe}}{{/required}} json;
 {{/hasVars}}
-{{classname}}({ {{#vars}}{{#required}}{{#nullSafe}}{{^vendorExtensions.x-ns-default-val}}required {{/vendorExtensions.x-ns-default-val}}{{/nullSafe}}{{/required}}{{#vendorExtensions.x-ns-default-val}}this.{{{name}}} = const {{{defaultValue}}}{{/vendorExtensions.x-ns-default-val}}{{^vendorExtensions.x-ns-default-val}}this.{{{name}}}{{/vendorExtensions.x-ns-default-val}},
-    {{/vars}} });
+{{classname}}({ {{#vars}}{{#required}}{{#nullSafe}}{{^vendorExtensions.x-ns-default-val}}required {{/vendorExtensions.x-ns-default-val}}{{/nullSafe}}{{/required}}{{#vendorExtensions.x-ns-default-val}}{{{dataType}}}{{#nullSafe}}?{{/nullSafe}} {{{name}}}{{/vendorExtensions.x-ns-default-val}}{{^vendorExtensions.x-ns-default-val}}this.{{{name}}}{{/vendorExtensions.x-ns-default-val}},
+    {{/vars}} }){{#vendorExtensions.x-has-ns-default-vals}} : {{#vendorExtensions.x-ns-default-vals}}this.{{{name}}} = {{{name}}} ?? []{{^-last}}, {{/-last}}{{/vendorExtensions.x-ns-default-vals}}{{/vendorExtensions.x-has-ns-default-vals}};
 
   @override
   String toString() {
@@ -87,7 +87,7 @@ class {{classname}}{{#parent}} extends {{parent}}{{/parent}} {
 {{/vendorExtensions.x-ns-default-val}}
         {{/required}}
       {{#isArray}}
-        json[r'{{baseName}}'] = {{{name}}}{{^nullSafe}}?{{/nullSafe}}{{^required}}{{#nullSafe}}?{{/nullSafe}}{{/required}}.map((v) => LocalApiClient.serialize(v)).toList();
+        json[r'{{baseName}}'] = {{{name}}}{{^nullSafe}}?{{/nullSafe}}{{^required}}{{#nullSafe}}{{^vendorExtensions.x-ns-default-val}}?{{/vendorExtensions.x-ns-default-val}}{{/nullSafe}}{{/required}}.map((v) => LocalApiClient.serialize(v)){{^nullSafe}}?{{/nullSafe}}.toList();
       {{/isArray}}
       {{#isMap}}
         json[r'{{baseName}}'] = Map.fromIterables({{{name}}}.keys,
@@ -180,7 +180,16 @@ class {{classname}}{{#parent}} extends {{parent}}{{/parent}} {
 
   {{#hasVars}}
     {{#vars}}{{^vendorExtensions.x-dart-inherited}}
-      if ({{{name}}} != null) {
+        {{#vendorExtensions.x-ns-default-val}}
+          if ({{{name}}}.isNotEmpty) {
+        {{/vendorExtensions.x-ns-default-val}}
+        {{^vendorExtensions.x-ns-default-val}}
+          {{#nullSafe}}
+          {{^required}}
+          if ({{{name}}} != null) {
+          {{/required}}
+          {{/nullSafe}}
+        {{/vendorExtensions.x-ns-default-val}}
       {{#isArray}}
         hashCode = hashCode * 31 + const ListEquality().hash({{{name}}});
       {{/isArray}}
@@ -190,8 +199,18 @@ class {{classname}}{{#parent}} extends {{parent}}{{/parent}} {
       {{^items}}
         hashCode = hashCode * 31 + {{{name}}}.hashCode;
       {{/items}}
-    }
-{{/vendorExtensions.x-dart-inherited}}{{/vars}}{{/hasVars}}{{^hasVars}}if (json != null) { hashCode = hashCode ^ json.hashCode; }{{/hasVars}}
+      {{#vendorExtensions.x-ns-default-val}}
+        }
+      {{/vendorExtensions.x-ns-default-val}}
+      {{^vendorExtensions.x-ns-default-val}}
+        {{#nullSafe}}
+          {{^required}}
+            }
+          {{/required}}
+        {{/nullSafe}}
+      {{/vendorExtensions.x-ns-default-val}}
+
+    {{/vendorExtensions.x-dart-inherited}}{{/vars}}{{/hasVars}}{{^hasVars}}if (json != null) { hashCode = hashCode ^ json.hashCode; }{{/hasVars}}
 
     return hashCode{{#parent}} ^ super.hashCode{{/parent}};
   }
