going into the last phases of null safe support.

--- a/src/main/resources/dart2-v3template/pubspec.mustache
+++ b/src/main/resources/dart2-v3template/pubspec.mustache
@@ -16,7 +16,7 @@ environment:
 {{/nullSafe}}
 dependencies:
 {{#nullSafe}}
-  dio: '4.0.0-beta5'
+  dio: '4.0.0-prev3'
   openapi_dart_common:
     path: '/Users/richard/projects/dart/openapi_dart_common'
   collection: '^1.15.0'
@@ -34,3 +34,4 @@ dev_dependencies:
 {{#x-dart-devdeps}}
   {{{.}}}
 {{/x-dart-devdeps}}
+# bought to you by the folks from FeatureHub https://featurehub.io
