fix versioning for openapi v5 and common 4.0

--- a/src/main/resources/dart2-v3template/pubspec.mustache
+++ b/src/main/resources/dart2-v3template/pubspec.mustache
@@ -17,8 +17,7 @@ environment:
 dependencies:
 {{#nullSafe}}
   dio: '4.0.0-prev3'
-  openapi_dart_common:
-    path: '/Users/richard/projects/dart/openapi_dart_common'
+  openapi_dart_common: ^4.0.0-prev1
   collection: '^1.15.0'
 {{/nullSafe}}
 {{^nullSafe}}
